--- a/src/app.css
+++ b/src/app.css
@@ -105,8 +105,8 @@ li p {
 
 /* Dark theme scrollbar styles */
 .dark ::-webkit-scrollbar-thumb {
-	background-color: rgba(42, 42, 42, 0.8); /* Darker color for dark theme */
-	border-color: rgba(0, 0, 0, var(--tw-border-opacity));
+	background-color: rgba(0, 37, 84, 0.8); /* Darker color for dark theme */
+	border-color: rgba(210, 60, 58, var(--tw-border-opacity));
 }
 
 ::-webkit-scrollbar {
@@ -153,13 +153,13 @@ select {
 }
 
 :global(.dark) .shimmer {
-	background: linear-gradient(90deg, #818286 25%, #eae5e5 50%, #818286 75%);
+	background: linear-gradient(90deg, #002554 25%, #D23C3A 50%, #002554 75%);
 	background-size: 200% 100%;
 	background-clip: text;
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
 	animation: shimmer 4s linear infinite;
-	color: #a1a3a7; /* Darker fallback color for dark mode */
+	color: #FAAE5B; /* Darker fallback color for dark mode */
 }
 
 @keyframes smoothFadeIn {
